--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-ga": "^2.4.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "reactstrap": "^5.0.0-alpha.4"
+    "reactstrap": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
