--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.0",
+    "bootstrap": "^4.1.3",
     "font-awesome": "^4.7.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-ga": "^2.4.1",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
-    "reactstrap": "^5.0.0"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-ga": "^2.5.3",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.3",
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
